--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_3475-Edit smallest.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
+      <img src="证件照.jpg" height="250" width="250" alt="Chaoqing Yang"></h3>
       <p>I am currently a Master of Medicine </a>. I graduated with a bachelor in Guangzhou University of Chinese Medicine</p>
+        
       <p>My research interests include Exercise and Social interaction,the forgetting of memory.</p>
       </section>
     </div>
